--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   "devDependencies": {
     "bootstrap": "^4.0.0-beta",
     "gulp": "^3.9.1",
+    "gulp-add-src": "^0.2.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   }
 }
