Block based templates

--- a/data/Strings.yaml
+++ b/data/Strings.yaml
@@ -8,5 +8,5 @@ lastupdate: last update
 metaReadinMinutes: Minute Read
 next: Next
 previous: Previous
-readmore: Read more
+readmore: mehr
 words: Words
