--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11",
     "jquery": "^3.2.1",
-    "popper.js": "^1.12.5"
+    "lunarjs": "^1.0.2",
+    "lunr": "^2.1.3",
+    "popper.js": "^1.12.5",
+    "video.js": "^6.2.7"
   }
 }
